--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>BabelPod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-      /* General styles for the range input */
       input[type="range"] {
         -webkit-appearance: none;
         width: 100%;
@@ -14,49 +13,35 @@
         outline: none;
         cursor: pointer;
       }
-
-      /* Chrome, Safari, Edge - Track */
       input[type="range"]::-webkit-slider-runnable-track {
-        background: linear-gradient(
-          to right,
-          #999 0%,
-          #666 100%
-        ); /* Gradient from light to dark gray */
+        background: linear-gradient(to right, #bbb 0%, #555 100%);
         height: 6px;
         border-radius: 3px;
       }
-
-      /* Chrome, Safari, Edge - Fill before the thumb */
       input[type="range"]::-webkit-slider-runnable-track {
         background: linear-gradient(
           to right,
-          #ccc 0%,
-          #ccc var(--progress),
+          #920000 0%,
+          #fe0000 var(--progress),
           #666 var(--progress),
           #666 100%
         );
       }
-
-      /* Chrome, Safari, Edge - Thumb */
       input[type="range"]::-webkit-slider-thumb {
         -webkit-appearance: none;
         background: #ccc;
         width: 16px;
         height: 16px;
         border-radius: 50%;
-        margin-top: -5px; /* Center thumb */
+        margin-top: -5px;
         cursor: pointer;
         box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
       }
-
-      /* Firefox - Track */
       input[type="range"]::-moz-range-track {
         background: linear-gradient(to right, #999 0%, #666 100%);
         height: 6px;
         border-radius: 3px;
       }
-
-      /* Firefox - Thumb */
       input[type="range"]::-moz-range-thumb {
         background: #ccc;
         width: 16px;
@@ -64,8 +49,6 @@
         border-radius: 50%;
         cursor: pointer;
       }
-
-      /* IE - Track */
       input[type="range"]::-ms-track {
         background: transparent;
         height: 6px;
@@ -73,19 +56,14 @@
         border: none;
         color: transparent;
       }
-
-      /* IE - Fill the track */
       input[type="range"]::-ms-fill-lower {
         background: #ccc;
         border-radius: 3px;
       }
-
       input[type="range"]::-ms-fill-upper {
         background: #666;
         border-radius: 3px;
       }
-
-      /* IE - Thumb */
       input[type="range"]::-ms-thumb {
         background: #ccc;
         width: 16px;
@@ -93,17 +71,12 @@
         border-radius: 50%;
         cursor: pointer;
       }
-
-      /* Focus styles */
       input[type="range"]:focus {
         outline: none;
       }
-
-      /* Hover effects */
       input[type="range"]:hover::-webkit-slider-runnable-track {
         background: linear-gradient(to right, #bbb 0%, #555 100%);
       }
-
       input[type="range"]:hover::-webkit-slider-thumb {
         background: #ddd;
       }
@@ -131,20 +104,6 @@
         margin: 1rem 0 0.25rem;
         font-weight: 500;
       }
-      /* select,
-      input[type="range"] {
-        width: 100%;
-        font-size: 1rem;
-        margin-bottom: 1rem;
-        background: #fff;
-        color: #ddd;
-        border: 1px solid #fff;
-        padding: 0.5rem;
-        border-radius: 6px;
-      } */
-      /* #outputVolume {
-        margin-top: 0.5rem;
-      } */
       .checkbox-list {
         background: #2a2a2a;
         border: 1px solid #444;
@@ -166,6 +125,35 @@
         padding: 1rem;
         border-radius: 6px;
         font-size: 0.9rem;
+      }
+
+      /* Session overlay */
+      #sessionOverlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.75);
+        color: #fff;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 9999;
+      }
+      #sessionOverlay button {
+        margin-top: 1rem;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        background: #444;
+        border: none;
+        border-radius: 4px;
+        color: white;
+        cursor: pointer;
+      }
+      #sessionOverlay button:hover {
+        background: #666;
       }
     </style>
   </head>
@@ -189,6 +177,12 @@
       </div>
     </div>
 
+    <div id="sessionOverlay">
+      <h1>You are not controlling BabelPod</h1>
+      <p>Another user is controlling. You can take over.</p>
+      <button id="takeOverBtn">Take Over Control</button>
+    </div>
+
     <script src="/socket.io/socket.io.js"></script>
     <script>
       const rangeInput = document.querySelector('input[type="range"]');
@@ -201,14 +195,14 @@
       }
 
       rangeInput.addEventListener("input", updateSliderProgress);
-      updateSliderProgress(); // Initialize on page load
-    </script>
-    <script>
+      updateSliderProgress();
+
       const socket = io();
 
       let currentInput = "void";
       let currentVolume = 50;
       let currentOutputs = [];
+      let isOwner = false;
 
       const inputSelect = document.getElementById("inputSelect");
       const volumeRange = document.getElementById("outputVolume");
@@ -216,6 +210,8 @@
       const curInputText = document.getElementById("curInputText");
       const curVolumeText = document.getElementById("curVolumeText");
       const activeOutputsUl = document.getElementById("activeOutputs");
+      const sessionOverlay = document.getElementById("sessionOverlay");
+      const takeOverBtn = document.getElementById("takeOverBtn");
 
       function renderActiveOutputs() {
         while (activeOutputsUl.firstChild) {
@@ -227,6 +223,18 @@
           activeOutputsUl.appendChild(li);
         });
       }
+
+      // Overlay logic
+      function updateOverlay() {
+        if (isOwner) {
+          sessionOverlay.style.display = "none";
+        } else {
+          sessionOverlay.style.display = "flex";
+        }
+      }
+      takeOverBtn.addEventListener("click", () => {
+        socket.emit("user_takeover");
+      });
 
       // Socket events
       socket.on("available_inputs", (list) => {
@@ -264,7 +272,6 @@
       socket.on("switched_output", (outs) => {
         if (!Array.isArray(outs)) outs = [outs];
         currentOutputs = outs;
-        // update checkboxes
         const allChecks = outputsListDiv.querySelectorAll(
           "input[type=checkbox]"
         );
@@ -278,6 +285,15 @@
         volumeRange.value = vol;
         curVolumeText.textContent = String(vol);
       });
+      socket.on("sessionOwnerUpdate", (ownerId) => {
+        isOwner = socket.id === ownerId;
+        updateOverlay();
+      });
+      socket.on("sessionLostControl", () => {
+        // We are no longer the owner
+        isOwner = false;
+        updateOverlay();
+      });
 
       function onOutputCheckChange(e) {
         const cbs = outputsListDiv.querySelectorAll("input[type=checkbox]");
@@ -288,7 +304,6 @@
         socket.emit("switch_output", sel);
       }
 
-      // UI events
       inputSelect.addEventListener("change", (ev) => {
         socket.emit("switch_input", ev.target.value);
       });
